--- a/Front End Development Libraries (Project 1)/package.json
+++ b/Front End Development Libraries (Project 1)/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://yourusername.github.io/your-repository-name",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -25,4 +28,7 @@
     "globals": "^15.12.0",
     "vite": "^6.0.1"
   }
+  
 }
+
+
