Updates the package.json file

--- a/Front End Development Libraries (Project 1)/package.json
+++ b/Front End Development Libraries (Project 1)/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fcc",
+  "name": "Front End Development Libraries (Project 1)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
